--- a/dev/tests/unit/phpunit.xml.dist
+++ b/dev/tests/unit/phpunit.xml.dist
@@ -43,6 +43,9 @@
             <directory>../../tests/unit/*/Test/Unit</directory>
         </testsuite>
     </testsuites>
+    <logging>
+        <junit outputFile="test-reports/coverage"/>
+    </logging>
     <php>
         <ini name="memory_limit" value="-1"/>
         <ini name="date.timezone" value="America/Los_Angeles"/>
